# sdl2

./: .gitignore  Game.hpp  GameObject.hpp  TextureManager.cpp  main.cpp
SDL_WindowTest/: Circle.cpp  Circle.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  TextureManager.cpp  TextureManager.hpp  main.cpp
SDL_WindowTest.xcodeproj/: project.pbxproj
SDL_WindowTest.xcodeproj/xcshareddata/xcschemes/: SDL_WindowTest.xcscheme
SDL_WindowTest.xcodeproj/xcuserdata/bulatislamov.xcuserdatad/xcschemes/: xcschememanagement.plist
cmake-test/: CMakeLists.txt  Game.cpp  Game.hpp  GameObject.cpp  Map.cpp  Map.hpp  TextureManager.cpp  TextureManager.hpp  cmake-test.cpp
